small screen: fixed items listed in #70, #65 - home page: spacing with bg; - restaurants: spacing for the input fields; - restaurant info: spacing for the content; - order form: fit 100%, spacing for the content; - confirmation page: spacing for the content; - header menu: overlap bit-tabs.

--- a/less/header.less
+++ b/less/header.less
@@ -44,6 +44,9 @@ header {
       list-style-type: none;
       margin: 0;
       padding: 0;
+      position: relative;
+      z-index: 1;
+      background-color: @brand-primary;
       
       li {
         display: inline-block; 
@@ -54,6 +57,12 @@ header {
          // line-height: @navbar-height - (@navbar-padding-horizontal*2);
         }  
       }
+
+      /* override bootstrap */
+      &.navbar-nav > li > a {
+        padding-top: 10px;
+        padding-bottom: 10px;
+      }
     }
   }
 }
@@ -62,8 +71,9 @@ header {
   margin-bottom: @grid-gutter-width/2;
 }
 
-@media (max-width: 767px) {
+@media (max-width: @screen-sm-max) {
  header {
+   margin-bottom: 0px;
    a {
        border-radius: 0;
        margin-right: 0;
