--- a/less/restaurants.less
+++ b/less/restaurants.less
@@ -76,3 +76,16 @@
       }
     }
 }
+
+@media (max-width: @screen-sm-max) {
+
+  .restaurants, h2.page-header, .restaurant-content {
+    padding-left: @grid-gutter-width/2;
+    padding-right: @grid-gutter-width/2;
+  }
+  .restaurant, h2.page-header {
+    margin-left: -@grid-gutter-width/2;
+    margin-right: -@grid-gutter-width/2;
+  }
+
+}
